--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://github.com/avianto/hugo-kiera.git
 [submodule "public"]
 	path = public
-	url = git@github.com:kincl/kincl.github.io.git
+	url = https://github.com/kincl/kincl.github.io.git
 	branch = master
